# todo-server

./: Cargo.toml  Makefile  README.md
src/: lib.rs  main.rs
src/todo_api_web/: mod.rs  routes.rs
src/todo_api_web/controller/: mod.rs  todo.rs
src/todo_api_web/model/: todo.rs
tests/: lib.rs
tests/todo_api_web/: controller.rs
