[package]
name = "todo-server"
version = "0.1.0"
authors = ["Filipe"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
num_cpus = "1"
uuid = { version = "1", features = ["serde", "v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_derive = "1"

[dev-dependencies]
bytes="1"
actix-service = "1"